# tw-safe-update

./: .gitignore  LICENSE  README.md  RPM-GPG-KEY-tw-safe-update  install.sh  uninstall.sh
.github/workflows/: build.yml
man/: twsu-check.1  twsu-details.1  twsu-tray.1  twsu-update.1
packaging/: tw-safe-update.spec
packaging/obs/: GUIDE.md  _service
share/: org.opensuse.twsafeupdate.desktop  org.opensuse.twsafeupdate.metainfo.xml
sudoers/: 50-tw-safe-update.in
systemd/: tw-safe-update-tray.service  tw-safe-update.service  tw-safe-update.timer
tests/: run-tests.sh
tests/fixtures/: clean-upgrade.txt  critical-removal.txt  downgrade-remove.txt  held-back.txt  nothing.txt  problems.txt  vendor-change.txt
tray/: CMakeLists.txt  twsu-tray.cpp
